fix: improved the frontend
